fix(android): Map not showing because of no transparency

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,6 +1,14 @@
 /* Ionic Variables and Theming. For more info, please see:
 http://ionicframework.com/docs/theming/ */
 
+ion-content {
+  --background: transparent;
+}
+
+body {
+  background: transparent;
+}
+
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
